--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2",
-    "vuetify": "^3.3.6"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.3.20"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "electron": "^24.6.1",
-    "electron-builder": "^24.4.0",
-    "sass": "^1.63.6",
-    "typescript": "^5.1.6",
-    "vite": "^4.3.9",
-    "vite-plugin-electron": "^0.12.0",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "electron": "^26.2.4",
+    "electron-builder": "^24.6.4",
+    "sass": "^1.68.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.10",
+    "vite-plugin-electron": "^0.14.1",
     "vite-plugin-electron-renderer": "^0.14.5",
-    "vite-plugin-vue-devtools": "^0.4.10",
-    "vue-tsc": "^1.8.3"
+    "vite-plugin-vue-devtools": "1.0.0-rc.5",
+    "vue-tsc": "^1.8.15"
   },
   "main": "dist/electron/main.js"
 }
